force-app/main/default/objects/Patient__c/fields/ABHA_ID__c.field-meta.xml
<CustomField>
    <fullName>ABHA_ID__c</fullName>
    <externalId>true</externalId>
    <label>ABHA ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>