force-app/main/default/objects/Patient__c/fields/EHS_No__c.field-meta.xml
<CustomField>
    <fullName>EHS_No__c</fullName>
    <externalId>true</externalId>
    <label>EHS No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>