force-app/main/default/objects/Patient__c/fields/Eligible_for_GOVT_Health_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_GOVT_Health_Schemes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for GOVT Health Schemes</label>
    <type>Checkbox</type>
</CustomField>