force-app/main/default/objects/Patient__c/fields/Insurance_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Email__c</fullName>
    <label>Insurance Company Email</label>
    <type>Email</type>
</CustomField>