force-app/main/default/objects/Patient__c/fields/Patient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone__c</fullName>
    <label>Patient Phone</label>
    <type>Phone</type>
</CustomField>