force-app/main/default/objects/Patient__c/fields/Patient_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pin_Code__c</fullName>
    <label>Patient Pin Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>