force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>ABHA_ID__c</columns>
    <columns>Patient_State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>